@@ -24,7 +24,7 @@
  */
 ?>
 
-<?php $products = ZMProducts::instance()->getNewProducts(null, 1); ?>
+<?php $products = ZMProducts::instance()->getNewProducts(null, 1, null, $session->getLanguageId()); ?>
 <?php if (1 == count($products)) {
     $product = $products[0];
     ?>
