@@ -32,7 +32,7 @@
     <?php } ?>
 <?php } ?>
 
-<?php $featured = ZMProducts::instance()->getFeaturedProducts($zm_category->getId(), 4, true); ?>
+<?php $featured = ZMProducts::instance()->getFeaturedProducts($zm_category->getId(), 4, true, $session->getLanguageId()); ?>
 
 <?php if (0 < count($featured)) { ?>
     <h3>Featured Products</h3>
