@@ -45,6 +45,7 @@ Release 0.9.5
 - remove obsolete ZMSimpleResultList
 - clean up some more (c) notes
 - change shipping/billing address checking for guest checkout
+- use $session to explicitely set the languageId on service calls
 
 Release 0.9.4.2
 - improve ZMAjaxController::flattenObject(); using ZMBeanUtils, correct
